Resolves: tdf#120785 no parent set via status bar

Change-Id: Ibdc0f75b18330b77e18293f7485e165d2133290e